<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/question_answer"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/iv_beer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_faq_data"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackground"
            app:custom_icon="@drawable/ic_arrow_right"
            app:custom_text="@string/faq_data"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_answer_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHighlight"
            android:visibility="gone"
            app:custom_text="@string/answer_data"
            app:layout_constraintTop_toBottomOf="@+id/db_faq_data" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_faq_update"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?attr/selectableItemBackground"
            app:custom_icon="@drawable/ic_arrow_right"
            app:custom_text="@string/faq_update"
            app:layout_constraintTop_toBottomOf="@+id/db_answer_data" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_answer_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHighlight"
            android:visibility="gone"
            app:custom_text="@string/answer_update"
            app:layout_constraintTop_toBottomOf="@+id/db_faq_update" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_faq_push"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?attr/selectableItemBackground"
            app:custom_icon="@drawable/ic_arrow_right"
            app:custom_text="@string/faq_push"
            app:layout_constraintTop_toBottomOf="@+id/db_answer_update" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_answer_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHighlight"
            android:visibility="gone"
            app:custom_text="@string/answer_push"
            app:layout_constraintTop_toBottomOf="@+id/db_faq_push" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_faq_feeling"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?attr/selectableItemBackground"
            app:custom_icon="@drawable/ic_arrow_right"
            app:custom_text="@string/faq_feeling"
            app:layout_constraintTop_toBottomOf="@+id/db_answer_push" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_answer_feeling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHighlight"
            android:visibility="gone"
            app:custom_text="@string/answer_feeling"
            app:layout_constraintTop_toBottomOf="@+id/db_faq_feeling" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_faq_invite"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="?attr/selectableItemBackground"
            app:custom_icon="@drawable/ic_arrow_right"
            app:custom_text="@string/faq_invite"
            app:layout_constraintTop_toBottomOf="@+id/db_answer_feeling" />

        <com.alcocontrol.view.DashedBox
            android:id="@+id/db_answer_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHighlight"
            android:visibility="gone"
            app:custom_text="@string/answer_invite"
            app:layout_constraintTop_toBottomOf="@+id/db_faq_invite" />

        <include layout="@layout/include_close" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
