<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/plan"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_drink"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:text="@string/enter_drink"
        android:textAllCaps="true"
        android:textColor="@color/colorGray30"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/il_volume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_search_small"
        app:layout_constraintBottom_toBottomOf="@+id/tv_drink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_drink" />

    <ImageView
        android:id="@+id/iv_drink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/shadow_divider"
        app:layout_constraintEnd_toEndOf="@+id/tv_drink"
        app:layout_constraintStart_toStartOf="@+id/tv_drink"
        app:layout_constraintTop_toBottomOf="@+id/tv_drink" />

    <TextView
        android:id="@+id/tv_drink_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/error_drink"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_drink"
        app:layout_constraintTop_toBottomOf="@+id/iv_drink"
        tools:visibility="visible" />

    <com.alcocontrol.view.InputLayout
        android:id="@+id/il_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:custom_error="@string/error_volume"
        app:custom_hint="@string/enter_volume"
        app:custom_ime="actionNext"
        app:custom_suffix="@string/ml"
        app:custom_type="number"
        app:layout_constraintBottom_toTopOf="@+id/il_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_drink" />

    <com.alcocontrol.view.InputLayout
        android:id="@+id/il_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:custom_hint="@string/enter_quantity"
        app:custom_ime="actionNext"
        app:custom_suffix="@string/ml"
        app:custom_type="number"
        app:layout_constraintBottom_toTopOf="@+id/il_time"
        app:layout_constraintTop_toBottomOf="@+id/il_volume" />

    <com.alcocontrol.view.InputLayout
        android:id="@+id/il_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:custom_error="@string/error_time"
        app:custom_hint="@string/enter_time"
        app:custom_ime="actionDone"
        app:custom_type="datetime|time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_amount" />

    <TextView
        android:id="@+id/tv_skip"
        style="@style/GrayButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/skip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_choose"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_choose"
        style="@style/DisabledButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/choose"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_skip" />

</androidx.constraintlayout.widget.ConstraintLayout>
