<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:lineSpacingExtra="10sp"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/feedback"
        tools:textSize="25sp" />

    <com.alcocontrol.view.InputLayout
        android:id="@+id/il_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:custom_error="@string/error_mail"
        app:custom_hint="@string/your_mail"
        app:custom_ime="actionNext"
        app:custom_type="text|textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"
        android:textColor="@color/colorGray30"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_mail"
        tools:text="@string/your_question" />

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/multiline_box"
        android:gravity="start|top"
        android:hint="@string/your_text"
        android:inputType="textMultiLine"
        android:padding="15dp"
        android:saveEnabled="false"
        android:textColor="@color/colorGray30"
        android:textColorHint="@color/colorGray30"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

    <TextView
        android:id="@+id/tv_text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingTop="2dp"
        android:text="@string/error_text"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_text"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_send"
        style="@style/DisabledButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/send"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <include layout="@layout/include_close" />

</androidx.constraintlayout.widget.ConstraintLayout>
