<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/change_language"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_beer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.alcocontrol.view.DashedBox
        android:id="@+id/db_language"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        app:custom_size="18sp"
        app:custom_text="@string/language"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.alcocontrol.view.DashedBox
        android:id="@+id/db_russian"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:custom_text="@string/russian"
        app:layout_constraintTop_toBottomOf="@+id/db_language" />

    <com.alcocontrol.view.DashedBox
        android:id="@+id/db_english"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:custom_dashed="false"
        app:custom_text="@string/english"
        app:layout_constraintTop_toBottomOf="@+id/db_russian" />

    <include layout="@layout/include_close" />

</androidx.constraintlayout.widget.ConstraintLayout>
